[gd_scene load_steps=6 format=3 uid="uid://dhm3olaboa48h"]

[ext_resource type="Script" path="res://scenes/props/banana.gd" id="1_5sge8"]
[ext_resource type="Texture2D" uid="uid://2ued6reh7nxo" path="res://assets/gfx/items.png" id="1_6e4fj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1dql"]
size = Vector2(17.8165, 9.82798)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwwtu"]
atlas = ExtResource("1_6e4fj")
region = Rect2(82, 48, 22, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6vxo"]
size = Vector2(20, 12)

[node name="Banana" type="RigidBody2D"]
collision_layer = 65
collision_mask = 65
mass = 0.2
script = ExtResource("1_5sge8")

[node name="PhysicsShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.132757, 0.128588)
shape = SubResource("RectangleShape2D_v1dql")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_wwwtu")

[node name="CollisionBody" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3072

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBody"]
shape = SubResource("RectangleShape2D_q6vxo")

[connection signal="body_entered" from="CollisionBody" to="." method="_on_static_body_2d_body_entered"]
